# goit-ds-hw-03

HomeTask_03_Task_01/my_project/: pyproject.toml
HomeTask_03_Task_01/my_project/my_project/: create_mongo_db.py  main.py
HomeTask_03_Task_02/hometask_03_02/: authors.json  pyproject.toml
HomeTask_03_Task_02/hometask_03_02/hometask_03_02/: context_manager.py  creating_mongodb.py  main.py
